fix blog page prose li z-index

--- a/styles/global.css
+++ b/styles/global.css
@@ -17,3 +17,7 @@ a {
 a:hover {
   text-decoration: underline;
 }
+
+.prose ul > li {
+  z-index: 0;
+}
